Fix chevron & edit price styles

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                 <a href="#" class="btn btn-primary btn-lg">Get the app</a>
                 <a href="#" class="btn btn-secondary btn-lg">Sign up</a>
             </div>
+
+            <a class="bottom-button animated fadeIn" href="#features">
+                <img class="chevron" src="img/chevron-down.svg"/>
+            </a>
         </div>
     </div>
 </section>
@@ -110,25 +114,22 @@
         <h1>Pricing</h1>
         <p class="lead">Pricing options include photo editing.</p>
         <div class="row">
-            <div class="offset-md-3 col-md-3 pricing-tier scrollreveal" data-animation-name="fadeIn">
-                <span class="name">Enthusiast</span>
+            <div class="col-sm-6 pricing-tier scrollreveal" data-animation-name="fadeIn">
+                <h2>Enthusiast</h2>
                 <span class="cost">25</span>
-                <ul class="features">
-                    <li>Feature 1</li>
-                    <li>Feature 2</li>
-                    <li>Feature 3</li>
-                </ul>
+                <p class="description">
+                    Description of price range
+                </p>
             </div>
-            <div class="col-md-3 pricing-tier scrollreveal" data-animation-name="fadeIn">
-                <span class="name">Professional</span>
+            <div class="col-sm-6 pricing-tier scrollreveal" data-animation-name="fadeIn">
+                <h2>Professional</h2>
                 <span class="cost">35</span>
-                <ul class="features">
-                    <li>Feature 1</li>
-                    <li>Feature 2</li>
-                    <li>Feature 3</li>
-                </ul>
+                <p class="description">
+                    Description of price range
+                </p>
             </div>
         </div>
+        <p class="text-muted small text-right">* Prices are for informative purposes only and are subject to change</p>
     </div>
 </section>
 
