Main Team Title Change

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <section id="team">
     <div class="container">
-        <h1>Team</h1>
+        <h1 class="main1">Team</h1>
         <div class="row justify-content-center">
             <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                 <h2 class="name">Hady El-Saleh</h2>
