Add a bit of padding to the bottom of pricing options

--- a/index.html
+++ b/index.html
@@ -231,12 +231,9 @@
                             <div class="overlay">
                                 <p class="description">
                                     Randy is the man with the vision. He makes sure the team are all on the page about
-                                    project
-                                    and that this is the best direction to take it. His analytical thinking of how
-                                    someone would
-                                    want to use the product and what they would get out of it is a great perk in helping
-                                    produce
-                                    the best possible experience for our users.
+                                    project and that this is the best direction to take it. His analytical thinking of
+                                    how someone would want to use the product and what they would get out of it is a
+                                    great perk in helping produce the best possible experience for our users.
                                 </p>
                             </div>
                         </div>
