--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
                         </p>
                     </div>
                 </div>
-                <p class="text-muted small text-right">* Prices are for informative purposes only and are subject to
-                    change</p>
+                <p class="text-muted small text-right">
+                    * Prices are for informative purposes only and are subject to change
+                </p>
             </div>
         </section>
 
@@ -152,10 +153,9 @@
                             <div class="overlay">
                                 <p class="description">
                                     Hadi is a businessman at heart. He is always thinking of how to push our service to
-                                    the next
-                                    level and how to better market our product to the right people. His entrepreneurial
-                                    mindset
-                                    helps us get our project off ground and into more possibilities in the future.
+                                    the next level and how to better market our product to the right people. His
+                                    entrepreneurial mindset helps us get our project off ground and into more
+                                    possibilities in the future.
                                 </p>
                             </div>
                         </div>
@@ -171,12 +171,9 @@
                             <div class="overlay">
                                 <p class="description">
                                     Maulik is the founder and the all-rounder. He was the one to come up with the idea
-                                    and
-                                    elaborate it to the team when we were struggling. He dabbles in every facet of the
-                                    project.
-                                    His diverse skills are a key asset to team and make him a member we can rely on to
-                                    do pretty
-                                    much anything.
+                                    and elaborate it to the team when we were struggling. He dabbles in every facet of
+                                    the project. His diverse skills are a key asset to team and make him a member we can
+                                    rely on to do pretty much anything.
                                 </p>
                             </div>
                         </div>
@@ -192,11 +189,9 @@
                             <div class="overlay">
                                 <p class="description">
                                     For Nicolas, coding is a way of life. Once he gets his mind on a project, he
-                                    obsesses over
-                                    it. Nicolas has a great knowledge of coding and considerate programing experience
-                                    already
-                                    under his belt. He makes our project possible through his meticulous programing
-                                    skills.
+                                    obsesses over it. Nicolas has a great knowledge of coding and considerate programing
+                                    experience under his belt. He makes our project possible through his meticulous
+                                    programing skills.
                                 </p>
                             </div>
                         </div>
