Edit team member descriptions

--- a/index.html
+++ b/index.html
@@ -152,10 +152,9 @@
                             </div>
                             <div class="overlay">
                                 <p class="description">
-                                    Hadi is a businessman at heart. He is always thinking of how to push our service to
-                                    the next level and how to better market our product to the right people. His
-                                    entrepreneurial mindset helps us get our project off ground and into more
-                                    possibilities in the future.
+                                    Hadi is a businessman at heart. He is always thinking about how to push our service
+                                    to the next level and how to better market our product. His entrepreneurial mindset
+                                    helped us get our project off the ground.
                                 </p>
                             </div>
                         </div>
@@ -171,9 +170,8 @@
                             <div class="overlay">
                                 <p class="description">
                                     Maulik is the founder and the all-rounder. He was the one to come up with the idea
-                                    and elaborate it to the team when we were struggling. He dabbles in every facet of
-                                    the project. His diverse skills are a key asset to team and make him a member we can
-                                    rely on to do pretty much anything.
+                                    and explain it to the team when we were struggling. His diverse skills are a key
+                                    asset to team and make him a member we can rely on to do pretty much anything.
                                 </p>
                             </div>
                         </div>
@@ -206,11 +204,9 @@
                             </div>
                             <div class="overlay">
                                 <p class="description">
-                                    Maxim knows how to make something eye catching and clean at the same time. An
-                                    artstyle that
-                                    really compliments our service. His expertise in the graphic department helps us to
-                                    make our
-                                    product not only appealing but practical for the users.
+                                    Maxim knows how to make something eye catching and clean at the same time, an art
+                                    style that really compliments our service. His expertise in the graphic department
+                                    helps us make our product not only practical but also appealing for the users.
                                 </p>
                             </div>
                         </div>
@@ -225,10 +221,10 @@
                             </div>
                             <div class="overlay">
                                 <p class="description">
-                                    Randy is the man with the vision. He makes sure the team are all on the page about
-                                    project and that this is the best direction to take it. His analytical thinking of
-                                    how someone would want to use the product and what they would get out of it is a
-                                    great perk in helping produce the best possible experience for our users.
+                                    Randy is the man with the vision. He makes sure the team is always on the same page
+                                    regarding the project and that we are tackling issues in the most efficient way
+                                    possible. His analytical thinking is a great perk in helping produce the best
+                                    possible experience for our users.
                                 </p>
                             </div>
                         </div>
