--- a/index.html
+++ b/index.html
@@ -86,27 +86,31 @@
         <section id="features">
             <div class="container">
                 <h1>Features</h1>
-                <p class="lead">Picme is a service that allows people to get in contact with a photographer near their
-                    area for
-                    a quick photoshoot.</p>
+                <p class="lead">
+                    Picme is a service that allows people to get in contact with
+                    photographers in their area for a quick photoshoot.
+                </p>
                 <div class="row">
                     <div class="feature col-md-4 scrollreveal" data-animation-name="fadeInLeft">
                         <div class="icon"><img src="img/camera-retro.svg"/></div>
-                        <p>You have the option of selecting a professional photographer with an already established
-                            studio or an
-                            enthusiast who’s just starting out.</p>
+                        <p>
+                            You have the option of selecting a professional photographer with an already established
+                            studio or an enthusiast who’s just starting out.
+                        </p>
                     </div>
 
                     <div class="feature col-md-4 scrollreveal" data-animation-name="fadeInLeft">
                         <div class="icon"><img src="img/mobile-alt.svg"/></div>
-                        <p>Using the mobile app, you locate and choose a photograph signed up with the service and have
-                            them get
-                            to their location in a few minutes.</p>
+                        <p>
+                            Using the mobile app, you locate and choose a photograph signed up with the service and have
+                            them get to their location in a few minutes.
+                        </p>
                     </div>
 
                     <div class="feature col-md-4 scrollreveal" data-animation-name="fadeInLeft">
                         <div class="icon"><img src="img/paper-plane.svg"/></div>
-                        <p>After the shoot, the photographer sends you the pictures through the Picme app.
+                        <p>
+                            After the shoot, the photographer sends you the pictures through the Picme app.
                         <p>
                     </div>
                 </div>
@@ -152,7 +156,7 @@
                             </div>
                             <div class="overlay">
                                 <p class="description">
-                                    Hadi is a businessman at heart. He is always thinking about how to push our service
+                                    Hady is a businessman at heart. He is always thinking about how to push our service
                                     to the next level and how to better market our product. His entrepreneurial mindset
                                     helped us get our project off the ground.
                                 </p>
