Add descriptions to pricing

--- a/index.html
+++ b/index.html
@@ -122,23 +122,24 @@
                 <h1>Pricing</h1>
                 <p class="lead">Pricing options include photo editing.</p>
                 <div class="row">
-                    <div class="col-sm-6 pricing-tier scrollreveal" data-animation-name="fadeIn">
+                    <div class="col-sm-6 col-lg-4 offset-lg-1 pricing-tier scrollreveal" data-animation-name="fadeIn">
                         <h2>Enthusiast</h2>
                         <span class="cost">25</span>
                         <p class="description">
-                            Description of price range
+                            Want nice pictures without breaking the bank, while helping an enthusiast build his
+                            skill and reputation? This option is for you!
                         </p>
                     </div>
-                    <div class="col-sm-6 pricing-tier scrollreveal" data-animation-name="fadeIn">
+                    <div class="col-sm-6 col-lg-4 offset-lg-2 pricing-tier scrollreveal" data-animation-name="fadeIn">
                         <h2>Professional</h2>
-                        <span class="cost">35</span>
+                        <span class="cost">40</span>
                         <p class="description">
-                            Description of price range
+                            Need top quality pictures to impress all your friends on social media? Look no further!
                         </p>
                     </div>
                 </div>
                 <p class="text-muted small text-right">
-                    * Prices are for informative purposes only and are subject to change
+                    Prices are for information purposes only and are subject to change.
                 </p>
             </div>
         </section>
