Move features around and correct minor mistakes

--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
                 </p>
                 <div class="row">
                     <div class="feature col-md-4 scrollreveal" data-animation-name="fadeInLeft">
-                        <div class="icon"><img src="img/camera-retro.svg"/></div>
+                        <div class="icon"><img src="img/mobile-alt.svg"/></div>
                         <p>
-                            You have the option of selecting a professional photographer with an already established
-                            studio or an enthusiast who’s just starting out.
+                            Using the mobile app, you locate and choose a photographer who has joined the service and
+                            have them get to your location in a few minutes.
                         </p>
                     </div>
 
                     <div class="feature col-md-4 scrollreveal" data-animation-name="fadeInLeft">
-                        <div class="icon"><img src="img/mobile-alt.svg"/></div>
+                        <div class="icon"><img src="img/camera-retro.svg"/></div>
                         <p>
-                            Using the mobile app, you locate and choose a photograph signed up with the service and have
-                            them get to their location in a few minutes.
+                            You have the option of selecting a professional photographer with an already established
+                            studio or an enthusiast who want to grow his brand.
                         </p>
                     </div>
 
