Edit pricing note

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <p class="text-muted small text-right">
-                    Prices are for information purposes only and are subject to change.
+                    Prices are for display purposes only and may not reflect the final pricing scheme.
                 </p>
             </div>
         </section>
