Improve navigation box shadow

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </section>
 
         <footer class="footer">
-            <div class="container text-right">
+            <div class="container text-right text-muted">
                 Copyright &copy; 2017 Picme. All Rights Reserved.
             </div>
         </footer>
