Add "starting at" for professional photographers

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-lg-4 offset-lg-1 pricing-tier scrollreveal" data-animation-name="fadeIn">
                         <h2>Enthusiast</h2>
+                        <p class="mb-0">&nbsp;</p>
                         <span class="cost">25</span>
                         <p class="description">
                             Want nice pictures without breaking the bank, while helping an enthusiast build his
@@ -132,6 +133,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 offset-lg-2 pricing-tier scrollreveal" data-animation-name="fadeIn">
                         <h2>Professional</h2>
+                        <p class="mb-0">Starting at</p>
                         <span class="cost">40</span>
                         <p class="description">
                             Need top quality pictures to impress all your friends on social media? Look no further!
